deploy: zya-han/zya-han.github.io-private@dcfb9109291851b885ec9e9cbd852e3c5ceeb30d

--- a/armed-women/index.html
+++ b/armed-women/index.html
@@ -367,12 +367,12 @@
 
 <h2 id="-답변">💁 답변</h2>
 
-<p>한국에는 “은장도”로 유명한 장도(粧刀)의 전통이 있었습니다. 그런데 중국 한나라에는 이 용도에 상응하는 물건이 보이지 않습니다. 장도와 비슷한 크기로 서도(書刀)라는 칼이 있었으나, 주로 남성 관리가 허리에 차고 다녔고 죽간에서 틀린 글자를 긁어내는 데 사용했다는 점에서 장도와 다릅니다.</p>
+<p>한국에는 “은장도”로 유명한 <span class="hanja-word" data-hanja="粧刀">장도</span>의 전통이 있었습니다. 그런데 중국 한나라에는 이 용도에 상응하는 물건이 보이지 않습니다. 장도와 비슷한 크기로 <span class="hanja-word" data-hanja="書刀">서도</span>라는 칼이 있었으나, 주로 남성 관리가 허리에 차고 다녔고 죽간에서 틀린 글자를 긁어내는 데 사용했다는 점에서 장도와 다릅니다.</p>
 
 <p><img src="/assets/images/han-scraper-1.jpeg" alt="한나라 서도 유물 사진">
 <img src="/assets/images/han-scraper-2.png" alt="한나라 서도 유물 그림"></p>
 
-<p>서도를 허리에 걸고 다닌 한나라의 점잖은 지식인 남성의 경우, 대체로 여성이 무기를 소지하는 데 기겁한 것 같습니다. 대표적인 예로 전한 말의 학자 유향이 쓴 《열녀전(列女傳)》을 살펴봅시다. 이 책에서는 하나라 걸왕의 왕비 말희의 “악행”을 서술할 때 여자가 남자의 마음을 가져서 “검을 차고” 관을 썼다고 적었습니다. 말희가 검으로 사람을 해쳤다거나 하는 기록은 없지만, 남자들에게는 일단 여자가 공공연히 검을 착용했다는 것만으로 지탄할 만한 사유가 성립했던 것입니다. 이렇게 남자들은 검을 남성의 전유물로 여겼습니다.</p>
+<p>서도를 허리에 걸고 다닌 한나라의 점잖은 지식인 남성의 경우, 대체로 여성이 무기를 소지하는 데 기겁한 것 같습니다. 대표적인 예로 전한 말의 학자 유향이 쓴 《<span class="hanja-word" data-hanja="列女傳">열녀전</span>》을 살펴봅시다. 이 책에서는 하나라 걸왕의 왕비 말희의 “악행”을 서술할 때 여자가 남자의 마음을 가져서 “검을 차고” 관을 썼다고 적었습니다. 말희가 검으로 사람을 해쳤다거나 하는 기록은 없지만, 남자들에게는 일단 여자가 공공연히 검을 착용했다는 것만으로 지탄할 만한 사유가 성립했던 것입니다. 이렇게 남자들은 검을 남성의 전유물로 여겼습니다.</p>
 
 <p>하지만 남자들이 금지하고 싶어했다고 해서 존재가 없어지는 것은 아닙니다. 검술에 능통한 여성에 대한 기록 또한 존재합니다. 후한 시대 초반에 나온 《오월춘추》라는 책을 보면, 춘추 시대 오나라와 월나라가 서로 복수전을 벌일 때 월왕 구천이 월나라 남쪽 숲에 살던 검술의 달인 월녀를 등용해서 군대를 훈련시키는 이야기가 나옵니다. 《오월춘추》 자체는 허구적인 요소가 많고, 여기 등장하는 월녀의 행적도 원숭이 요괴와 싸우는 등 전설에 가깝습니다. 하지만 월녀검법은 왕충이라는 학자가 쓴 《논형》이라는 책에도 당시의 유명한 검법으로 언급되는 것으로 보아 후한 시기에 실제로 존재했을 가능성이 높습니다.</p>
 
@@ -535,7 +535,7 @@
                 <h3 class="related-post-title">한나라의 똑똑한 여자들은 어떻게 되었을까?</h3>
                 <p class="related-post-excerpt">🙋 질문
 
-한나라 때 여사(女士)의 기준은 어떠했나요? 남성 지식인과 대등하거나 그보다 뛰어난 역량을 증명해야 여사로 인정받았는지, 혹은 그보다 덜해도 ‘여자치고는 똑똑하네’...</p>
+한나라 때 여사女士의 기준은 어떠했나요? 남성 지식인과 대등하거나 그보다 뛰어난 역량을 증명해야 여사로 인정받았는지, 혹은 그보다 덜해도 ‘여자치고는 똑똑하네’라며...</p>
               </div>
             </a>
           </article>
