--- a/buyao/index.html
+++ b/buyao/index.html
@@ -367,7 +367,7 @@
 
 <h2 id="-답변">💁 답변</h2>
 
-<p>마왕퇴한묘 1호 무덤에 묻힌 신추의 머리장식은 보요(步搖)라고 합니다. 머리에 금속 장식들이 달려 있고, 걸을 때마다 이 장식들이 흔들린다고 해서 보요(步搖)라고 불렸습니다.</p>
+<p>마왕퇴한묘 1호 무덤에 묻힌 신추의 머리장식은 <span class="hanja-word" data-hanja="步搖">보요</span>라고 합니다. 머리에 금속 장식들이 달려 있고, 걸을 때마다 이 장식들이 흔들린다고 해서 <span class="hanja-word" data-hanja="步搖">보요</span>라고 불렸습니다.</p>
 
 <p>우선 보요의 존재는 여러 전래문헌에서 확인됩니다. 특히, 《후한서》에서 황후를 비롯한 귀부인들이 의식에 참여할 때 보요로 머리를 장식해야 한다는 규범이 존재하기도 했습니다.</p>
 
@@ -377,7 +377,7 @@
 
 <p><img src="/assets/images/mawangdui-1.jpeg" alt="마왕퇴한묘 1호 무덤 그림"></p>
 
-<p>다음 그림은 동진 시기의 작품 《여사잠도(女史箴圖)》입니다. 세 명의 여성이 모두 머리 위로 작은 조각들이 달린 장식을 얹고 있습니다. 이것도 마찬가지로 보요입니다.</p>
+<p>다음 그림은 동진 시기의 작품 《<span class="hanja-word" data-hanja="女史箴圖">여사잠도</span>》입니다. 세 명의 여성이 모두 머리 위로 작은 조각들이 달린 장식을 얹고 있습니다. 이것도 마찬가지로 보요입니다.</p>
 
 <p><img src="/assets/images/nvshizhentu-1.jpg" alt="여사잠도"></p>
 
