--- a/intelligent-women/index.html
+++ b/intelligent-women/index.html
@@ -363,13 +363,13 @@
                 <!-- End Toc -->
                 <h2 id="-질문">🙋 질문</h2>
 
-<p>한나라 때 여사(女士)의 기준은 어떠했나요? 남성 지식인과 대등하거나 그보다 뛰어난 역량을 증명해야 여사로 인정받았는지, 혹은 그보다 덜해도 ‘여자치고는 똑똑하네’라며 여사로 간주했는지 궁금합니다.</p>
+<p>한나라 때 <span class="hanja-word" data-hanja="女士">여사</span>의 기준은 어떠했나요? 남성 지식인과 대등하거나 그보다 뛰어난 역량을 증명해야 여사로 인정받았는지, 혹은 그보다 덜해도 ‘여자치고는 똑똑하네’라며 여사로 간주했는지 궁금합니다.</p>
 
 <h2 id="-답변">💁 답변</h2>
 
-<p>우선 “여사(女士)”라는 표현 자체는 한나라 때까지 흔히 쓰이지 않았습니다. 가장 이른 시기에 나온 용례는 <a href="https://ctext.org/book-of-poetry/ji-jui#n16400">《시경·대아·생민지습》 〈기취〉</a>의 마지막 구절인데, 이것은 훌륭한 아내를 주어 남자의 대를 잇게 하겠다는 내용이기 때문에 여성 지식인을 가리킨다고 보기 어렵습니다. 그 외의 경서나 제자백가 서적에서는 “여사”를 찾을 수 없고, 한나라의 역사를 포함하고 있는 《사기》·《한서》·《후한서》·《삼국지》에도 나오지 않습니다.</p>
+<p>우선 “<span class="hanja-word" data-hanja="女士">여사</span>”라는 표현 자체는 한나라 때까지 흔히 쓰이지 않았습니다. 가장 이른 시기에 나온 용례는 <a href="https://ctext.org/book-of-poetry/ji-jui#n16400">《시경·대아·생민지습》 〈기취〉</a>의 마지막 구절인데, 이것은 훌륭한 아내를 주어 남자의 대를 잇게 하겠다는 내용이기 때문에 여성 지식인을 가리킨다고 보기 어렵습니다. 그 외의 경서나 제자백가 서적에서는 “여사”를 찾을 수 없고, 한나라의 역사를 포함하고 있는 《사기》·《한서》·《후한서》·《삼국지》에도 나오지 않습니다.</p>
 
-<p>아(雅)가 추측하기로 아마도 고대 중국의 경우 “여자치고는 똑똑하네” 같은 인식이 현대와 같은 방식으로 작동하지는 않았을 것입니다. 이런 인식이 작동하려면 우선 똑똑함이라는 속성이 인간의 보편적인 미덕이라야 하고, 기본적으로 여성의 똑똑함이 남성의 똑똑함에 못 미친다고 믿어야 합니다. 그런데 고대 중국에서는 애초에 똑똑함이 남성에게만 미덕이었습니다. 심지어 <a href="https://ctext.org/book-of-poetry/zhan-yang#n16685">《시경·대아·탕지습》 〈첨앙〉</a>은 “똑똑한 남자는 성을 세우지만 똑똑한 여자는 성을 기울인다”라는 구절로 시작합니다. 즉, 주나라 남성 지식인들에게 여자는 남자보다 덜 똑똑한 (그래서 차별받아 마땅한) 존재가 아니라 아예 똑똑해서는 안 되는 존재였습니다. 여성에 대한 차별적 인식은 어디에나 존재했지만, 구체적인 면면은 이렇게 시대와 지역에 따라 다릅니다.</p>
+<p><span class="hanja-word" data-hanja="雅">아</span>가 추측하기로 아마도 고대 중국의 경우 “여자치고는 똑똑하네” 같은 인식이 현대와 같은 방식으로 작동하지는 않았을 것입니다. 이런 인식이 작동하려면 우선 똑똑함이라는 속성이 인간의 보편적인 미덕이라야 하고, 기본적으로 여성의 똑똑함이 남성의 똑똑함에 못 미친다고 믿어야 합니다. 그런데 고대 중국에서는 애초에 똑똑함이 남성에게만 미덕이었습니다. 심지어 <a href="https://ctext.org/book-of-poetry/zhan-yang#n16685">《시경·대아·탕지습》 〈첨앙〉</a>은 “똑똑한 남자는 성을 세우지만 똑똑한 여자는 성을 기울인다”라는 구절로 시작합니다. 즉, 주나라 남성 지식인들에게 여자는 남자보다 덜 똑똑한 (그래서 차별받아 마땅한) 존재가 아니라 아예 똑똑해서는 안 되는 존재였습니다. 여성에 대한 차별적 인식은 어디에나 존재했지만, 구체적인 면면은 이렇게 시대와 지역에 따라 다릅니다.</p>
 
 <p>전한시대로 오면 여성의 똑똑함이 악덕으로 규탄되지는 않습니다. 예를 들면 《사기》 〈편작창공열전〉에서 전한시대 초 순우제영이라는 소녀는 황제에게 직접 글을 올려 육형 폐지를 이끌어냈는데, 적어도 《사기》의 기록만 보면 이 과정에서 순우제영의 성별과 나이는 전혀 문제가 되지 않았습니다. “여자애 따위가 감히 어떻게!” 하는 비난도 없고 “여자애치고 대단한데!” 하는 감탄도 없습니다. 또 이전에 〈미녀를 혐오한 남자〉라는 포스트에서 썼듯이 전한시대 말 유향의 《열녀전》에는 똑똑하고 말 잘 하는 여자들이 많이 등장합니다. 여기서 여성의 지혜와 언변은 가정 내로 한정되지 않고 군주에게 국가 대사를 간언하는 데 이릅니다. 하지만 순우제영 등이 똑똑함을 발휘하는 것은 일회적 사건에 그쳤습니다. 여자라고 해서 똑똑함 자체가 폄하된 정황은 잘 보이지 않으나, 똑똑한 여자의 경우 똑똑한 남자와 달리 관직을 받아 계속 활동할 기회를 얻을 가능성이 아예 없었습니다.</p>
 
