--- a/page7/index.html
+++ b/page7/index.html
@@ -414,7 +414,7 @@
 
 💁 답변
 
-한국에는 “은장도”로 유명한 장도(粧刀)의 전통이 있었습니다. 그런데 중국 한나라에는 이 용도에 상응하는 물건이 보이지 않습...</h4>
+한국에는 “은장도”로 유명한 장도粧刀의 전통이 있었습니다. 그런데 중국 한나라에는 이 용도에 상응하는 물건이 보이지 않습니다...</h4>
         </div>
         <div class="card-footer bg-white">
             <div class="wrapfooter">
