--- a/real-zongjiao/index.html
+++ b/real-zongjiao/index.html
@@ -361,7 +361,7 @@
                 <!-- Toc if any -->
                 
                 <!-- End Toc -->
-                <p>앞선 포스트 〈<a href="/zongjiao/">손책과 주유의 총각지호<sup>總角之好</sup></a>〉에서 총각<sup>總角</sup>이라는 말이 상고시대 중국에서 어떤 의미였는지 살펴보았습니다. 그러면 총각머리를 하기 위해 머리카락을 어떻게 손질했을까요?</p>
+                <p>앞선 포스트 〈<a href="/zongjiao/">손책과 주유의 <span class="hanja-word" data-hanja="總角之好">총각지호</span></a>〉에서 <span class="hanja-word" data-hanja="總角">총각</span>이라는 말이 상고시대 중국에서 어떤 의미였는지 살펴보았습니다. 그러면 총각머리를 하기 위해 머리카락을 어떻게 손질했을까요?</p>
 
 <div class="card-button my-4 text-center">
     <a href="https://buymeacoffee.com/zya.han/real-zongjiao" target="_blank" class="btn-card">
