--- a/too-late-spinoff-paradox/index.html
+++ b/too-late-spinoff-paradox/index.html
@@ -361,15 +361,15 @@
                 <!-- Toc if any -->
                 
                 <!-- End Toc -->
-                <p><a href="/too-late/spinoff-bell/">정월 첫째 날 새벽부터 등을 밝히고 종을 울리면서</a> 힘차게 새해를 시작한 조조는 뭔가 허전했다.</p>
+                <p><a href="/too-late-spinoff-bell/">정월 첫째 날 새벽부터 등을 밝히고 종을 울리면서</a> 힘차게 새해를 시작한 조조는 뭔가 허전했다.</p>
 
-<p>신년을 맞이하면서 빠뜨린 것이 없는지 다시 한번 손가락을 꼽아 가며 점검했다. 하나, 오장을 튼튼하게 해 주는 오신반도 먹었고, 둘, 전염병을 막기 위해 날계란 한 알도 삼켰고, 셋, 악귀가 못 들어오도록 복숭아나무 목판에 신도와 울루를 그려서 문에 거는 것도 큰애들에게 시켰고, 넷, 산조<sup>山臊</sup><sup id="fnref:1"><a href="#fn:1" class="footnote" rel="footnote" role="doc-noteref">1</a></sup>를 쫓아내기 위해 마당에서 폭죽에 불을 붙이는 것은 작은애들이 더 신났고…</p>
+<p>신년을 맞이하면서 빠뜨린 것이 없는지 다시 한번 손가락을 꼽아 가며 점검했다. 하나, 오장을 튼튼하게 해 주는 오신반도 먹었고, 둘, 전염병을 막기 위해 날계란 한 알도 삼켰고, 셋, 악귀가 못 들어오도록 복숭아나무 목판에 신도와 울루를 그려서 문에 거는 것도 큰애들에게 시켰고, 넷, <span class="hanja-word" data-hanja="山臊">산조</span><sup id="fnref:1"><a href="#fn:1" class="footnote" rel="footnote" role="doc-noteref">1</a></sup>를 쫓아내기 위해 마당에서 폭죽에 불을 붙이는 것은 작은애들이 더 신났고…</p>
 
 <p>엄지부터 하나씩 접으면서 검지, 중지, 약지까지 네 가지를 세고 산조를 쫓아내는 데까지 이르자 새끼손가락이 남았다. 새끼손가락으로 관자놀이를 한참 긁적거린 끝에야 잊고 있던 것이 떠올랐다.</p>
 
-<p>“어떻게 공대를 까먹을 수 있지? 설마 고<sup>孤</sup>가 늙었나?!”</p>
+<p>“어떻게 공대를 까먹을 수 있지? 설마 <span class="hanja-word" data-hanja="孤">고</span>가 늙었나?!”</p>
 
-<p>진궁의 존재를 잊어버린 것보다 늙는 것이 더 큰 일이었다. 조조는 화초<sup>花椒</sup>로 담근 초주<sup>椒酒</sup>를 준비하라고 시자에게 명령했다.</p>
+<p>진궁의 존재를 잊어버린 것보다 늙는 것이 더 큰 일이었다. 조조는 <span class="hanja-word" data-hanja="花椒">화초</span>로 담근 <span class="hanja-word" data-hanja="椒酒">초주</span>를 준비하라고 시자에게 명령했다.</p>
 
 <div style="text-align: center; margin: 2em 0;">
     <img src="/assets/images/ornaments/leaf-flower-divider.png" alt="❊✬✬" style="width: 80px; height: auto;">
@@ -377,7 +377,7 @@
 
 <p>조조는 술통에 든 국자를 꺼내 진궁의 손에 쥐여 주었다.</p>
 
-<p>“새해고 경<sup>卿</sup>이 아기니까 먼저 마셔.”</p>
+<p>“새해고 <span class="hanja-word" data-hanja="卿">경</span>이 아기니까 먼저 마셔.”</p>
 
 <p>진궁은 국자로 술을 퍼서 잔에 담았다.</p>
 
@@ -441,7 +441,7 @@
 <div class="footnotes" role="doc-endnotes">
   <ol>
     <li id="fn:1">
-      <p>산조<sup>山臊</sup>는 인간처럼 생겼고 발이 하나 달린 요괴입니다. <a href="#fnref:1" class="reversefootnote" role="doc-backlink">↩</a></p>
+      <p><span class="hanja-word" data-hanja="山臊">산조</span>는 인간처럼 생겼고 발이 하나 달린 요괴입니다. <a href="#fnref:1" class="reversefootnote" role="doc-backlink">↩</a></p>
     </li>
   </ol>
 </div>
