--- a/women-s-names-supplement-2/index.html
+++ b/women-s-names-supplement-2/index.html
@@ -367,19 +367,19 @@
 
 <h2 id="-답변">💁 답변</h2>
 
-<p>전에 〈<a href="/women-s-names/">한대 여성의 이름과 자</a>〉에서 《한서》의 여성 인명과 《후한서》의 여성 인명을 비교한 적이 있었는데, 여기서는 《한서》에서 군(君)으로 끝나는 인명의 사례를 좀 더 자세히 보겠습니다.</p>
+<p>전에 〈<a href="/women-s-names/">한대 여성의 이름과 자</a>〉에서 《한서》의 여성 인명과 《후한서》의 여성 인명을 비교한 적이 있었는데, 여기서는 《한서》에서 <span class="hanja-word" data-hanja="君">군</span>으로 끝나는 인명의 사례를 좀 더 자세히 보겠습니다.</p>
 
-<p>탁왕손의 딸 문군(文君), 허광한의 딸 평군(平君), 곽광의 딸 성군(成君) 등은 모두 인명입니다. 그 외에도 《한서》에는 강도왕 유건의 딸 세군(細君)이 나오고, 같은 시기 동방삭의 아내로 성을 알 수 없는 또 다른 ‘세군’이 있으며, 연왕 유단의 후궁으로 곽소군(郭昭君)과 조좌군(趙左君)이 등장합니다.</p>
+<p>탁왕손의 딸 <span class="hanja-word" data-hanja="文君">문군</span>, 허광한의 딸 <span class="hanja-word" data-hanja="平君">평군</span>, 곽광의 딸 <span class="hanja-word" data-hanja="成君">성군</span> 등은 모두 인명입니다. 그 외에도 《한서》에는 강도왕 유건의 딸 <span class="hanja-word" data-hanja="細君">세군</span>이 나오고, 같은 시기 동방삭의 아내로 성을 알 수 없는 또 다른 ‘세군’이 있으며, 연왕 유단의 후궁으로 <span class="hanja-word" data-hanja="郭昭君">곽소군</span>과 <span class="hanja-word" data-hanja="趙左君">조좌군</span>이 등장합니다.</p>
 
-<p>전한시대 여성의 인명이 ‘군’으로 끝나는 사례는 《한서》와 같은 전래문헌뿐만 아니라 1985년 양주에서 발견된 죽간 《<a href="http://www.bsm.org.cn/?hanjian/5936.html">선령권서(先令券書)</a>》와 같은 출토자료에서도 찾을 수 있습니다. 이 문서는 전한시대 원시5년(기원후 5년) 주씨 부인의 유언과 재산 분할에 관한 내용을 담고 있는데, 본문 중에 주씨 부인의 딸로 이군(以君), 선군(仙君), 약군(弱君)이 열거됩니다. 이렇게 ‘군’은 다양한 한자와 결합해서 여성의 인명으로 많이 쓰였습니다. 단, 후한시대로만 가도 찾기 어려워지는 것으로 보아 전한시대에 집중된 유행이었던 듯합니다. 현대인 등려군과 직접적인 관련이 있을 가능성은 높지 않은 것 같습니다.</p>
+<p>전한시대 여성의 인명이 ‘군’으로 끝나는 사례는 《한서》와 같은 전래문헌뿐만 아니라 1985년 양주에서 발견된 죽간 《<a href="http://www.bsm.org.cn/?hanjian/5936.html"><span class="hanja-word" data-hanja="先令券書">선령권서</span></a>》와 같은 출토자료에서도 찾을 수 있습니다. 이 문서는 전한시대 원시5년(기원후 5년) 주씨 부인의 유언과 재산 분할에 관한 내용을 담고 있는데, 본문 중에 주씨 부인의 딸로 <span class="hanja-word" data-hanja="以君">이군</span>, <span class="hanja-word" data-hanja="仙君">선군</span>, <span class="hanja-word" data-hanja="弱君">약군</span>이 열거됩니다. 이렇게 ‘군’은 다양한 한자와 결합해서 여성의 인명으로 많이 쓰였습니다. 단, 후한시대로만 가도 찾기 어려워지는 것으로 보아 전한시대에 집중된 유행이었던 듯합니다. 현대인 등려군과 직접적인 관련이 있을 가능성은 높지 않은 것 같습니다.</p>
 
-<p>그런데 이들의 인명이 이름이었는지 아니면 자(字)였는지는 정확히 알 수 없습니다.</p>
+<p>그런데 이들의 인명이 이름이었는지 아니면 <span class="hanja-word" data-hanja="字">자</span>였는지는 정확히 알 수 없습니다.</p>
 
-<p>근거가 명확한 다른 사례를 찾아봅시다. 왕소군(王昭君)의 경우 《한서》 〈흉노전〉에 성명이 왕장(王牆)이고 소군(昭君)이 자라고 명시되어 있으며, 왕정군(王政君)의 경우 《한기(漢紀)》에 “皇后字正君”이라고 적혀 있기 때문에 정군(政君·正君)이 자였음을 알 수 있습니다.</p>
+<p>근거가 명확한 다른 사례를 찾아봅시다. <span class="hanja-word" data-hanja="王昭君">왕소군</span>의 경우 《한서》 〈흉노전〉에 성명이 <span class="hanja-word" data-hanja="王牆">왕장</span>이고 <span class="hanja-word" data-hanja="昭君">소군</span>이 자라고 명시되어 있으며, <span class="hanja-word" data-hanja="王政君">왕정군</span>의 경우 《<span class="hanja-word" data-hanja="漢紀">한기</span>》에 “皇后字正君”이라고 적혀 있기 때문에 정군(政君·正君)이 자였음을 알 수 있습니다.</p>
 
-<p>이런 사례로 볼 때 《한서》에 나오는 ‘문군’ 등도 역시 자였을 가능성이 있습니다. 《선령권서》의 경우도, ‘이군’ 등이 아들들의 자로 보이는 자진(子真), 자방(子方)과 나란히 쓰인 것으로 보아 마찬가지로 자였던 것 같습니다.</p>
+<p>이런 사례로 볼 때 《한서》에 나오는 ‘문군’ 등도 역시 자였을 가능성이 있습니다. 《선령권서》의 경우도, ‘이군’ 등이 아들들의 자로 보이는 <span class="hanja-word" data-hanja="子真">자진</span>, <span class="hanja-word" data-hanja="子方">자방</span>과 나란히 쓰인 것으로 보아 마찬가지로 자였던 것 같습니다.</p>
 
-<p>참고로 수성군(修成君)은 무제의 어머니 효경황후 왕씨가 황태자의 후궁이 되기 전 김왕손과 결혼해서 낳은 딸 김속(金俗)으로, 무제는 황제가 된 뒤 누나를 찾아서 수성군으로 봉했습니다. 여기서 ‘군’은 예전 포스트 〈<a href="/titles-for-women/">한대 여성의 작위</a>〉에서 언급했듯이 황실과 인척 관계가 있는 여성들에게 내린 작위입니다. 채옹의 《<a href="https://ctext.org/text.pl?node=648760&amp;if=en#n648800">독단</a>》에 따르면 ‘군’의 지위는 황제의 누이인 장공주(長公主)에 준했습니다.</p>
+<p>참고로 <span class="hanja-word" data-hanja="修成君">수성군</span>은 무제의 어머니 효경황후 왕씨가 황태자의 후궁이 되기 전 김왕손과 결혼해서 낳은 딸 <span class="hanja-word" data-hanja="金俗">김속</span>으로, 무제는 황제가 된 뒤 누나를 찾아서 수성군으로 봉했습니다. 여기서 ‘군’은 예전 포스트 〈<a href="/titles-for-women/">한대 여성의 작위</a>〉에서 언급했듯이 황실과 인척 관계가 있는 여성들에게 내린 작위입니다. 채옹의 《<a href="https://ctext.org/text.pl?node=648760&amp;if=en#n648800">독단</a>》에 따르면 ‘군’의 지위는 황제의 누이인 <span class="hanja-word" data-hanja="長公主">장공주</span>에 준했습니다.</p>
 
 <hr>
 
