--- a/alcohol-and-sex/index.html
+++ b/alcohol-and-sex/index.html
@@ -374,17 +374,17 @@
 <cite> 이수덕. (2005). 〈漢代 酒의 實像：술의 이용과 양조〉. 《중국사연구》 34, 7. </cite></p>
 </blockquote>
 
-<p>사가에 속한 기녀들은 오늘날 가기(家妓)로 분류됩니다. “가기”라는 말은 당나라 이후에 나오지만, 이전 시대의 경우 기(伎), 창(倡), 후(謳), 여악(女樂) 등 명칭이 다양하므로 여기에서는 편의상 모두 가기로 쓰겠습니다. 가기의 존재 자체는 대체로 전국 시대부터 확인 가능합니다. 예를 들어 《사기》 〈여불위열전〉에서 여불위가 진나라 공자 자초에게 바친 조희는 여불위의 가기로 볼 수 있습니다.</p>
+<p>사가에 속한 기녀들은 오늘날 <span class="hanja-word" data-hanja="家妓">가기</span>로 분류됩니다. “가기”라는 말은 당나라 이후에 나오지만, 이전 시대의 경우 <span class="hanja-word" data-hanja="伎">기</span>, <span class="hanja-word" data-hanja="倡">창</span>, <span class="hanja-word" data-hanja="謳">후</span>, <span class="hanja-word" data-hanja="女樂">여악</span> 등 명칭이 다양하므로 여기에서는 편의상 모두 가기로 쓰겠습니다. 가기의 존재 자체는 대체로 전국 시대부터 확인 가능합니다. 예를 들어 《사기》 〈여불위열전〉에서 여불위가 진나라 공자 자초에게 바친 조희는 여불위의 가기로 볼 수 있습니다.</p>
 
 <p>한나라로 오면 가기에 관한 기록이 많아집니다. 《한서》 〈외척전〉에는 자산을 가진 개인이 가난한 집 여자아이들을 모아 춤과 노래를 가르치는 사업을 벌이는 이야기가 나옵니다. 이 사업의 목적은 기방을 운영하는 것이 아니라 여자아이들을 권세가에 가기로 팔아넘기는 데 있었습니다. 〈외척전-사황손왕부인전〉의 주인공 왕옹수는 이렇게 태자궁의 가기로 팔려갔다가 황손의 총애를 받아 아기를 낳고 얼마 못 가 황태자의 반란에 연루되어 죽었습니다. 또, 《한서》 〈원후전〉에서는 효원태후 왕정군의 다섯 동생들이 외척으로서 부귀영화를 누리며 서로 뛰어난 가기를 확보하기 위해 경쟁을 벌였다는 이야기도 나옵니다.</p>
 
 <p>후한 말에는 가기 소유가 더욱 확대되었습니다. 《후한서》 〈중장통전〉에서 중장통은 부호들과 상인들까지 가기를 대규모로 보유하고 있는 사치를 비판했지만, 〈마융전〉에서 마융은 고명한 학자였음에도 사치를 부리고 음악을 좋아해서 제자와 만날 때조차 가기를 배치했습니다.</p>
 
-<p>이런 맥락에서 《삼국지》 위지25 〈양부전〉을 봅시다.  조홍은 하변 전투에서 승리한 기념으로 연회를 벌이고는 여창(女倡)들에게 속이 비치는 옷을 입고 북 위에서 춤을 추게 했습니다. 정황상 이 “여창” 역시 조홍의 가기들이었을 것입니다. 알려진 것처럼 조홍은 엄청난 부자였고 또 조조의 지친으로 권세를 누렸습니다. 가기의 소유가 확대된 시대에 조홍이 가기를 더 자극적인 방식으로 활용함으로써 자기의 부귀를 과시하고자 한 것은 아닐까요?</p>
+<p>이런 맥락에서 《삼국지》 위지25 〈양부전〉을 봅시다.  조홍은 하변 전투에서 승리한 기념으로 연회를 벌이고는 <span class="hanja-word" data-hanja="女倡">여창</span>들에게 속이 비치는 옷을 입고 북 위에서 춤을 추게 했습니다. 정황상 이 “여창” 역시 조홍의 가기들이었을 것입니다. 알려진 것처럼 조홍은 엄청난 부자였고 또 조조의 지친으로 권세를 누렸습니다. 가기의 소유가 확대된 시대에 조홍이 가기를 더 자극적인 방식으로 활용함으로써 자기의 부귀를 과시하고자 한 것은 아닐까요?</p>
 
 <p>이렇게 가기를 활용한 사치 경쟁은 서진 시대에 더욱 심해졌습니다. 《진서》 〈왕돈전〉에서, 당시 석숭과 함께 부를 다투던 왕개는 술자리에서 가기가 피리를 불다가 음을 하나라도 틀리면 바로 죽여 버렸습니다. 며칠 뒤 왕개는 또 연회를 열어서 미인들에게 술을 따르게 하고, 손님이 술잔을 비우지 않으면 담당 미인의 목을 베었습니다.  《세설신어》 〈태치〉에 따르면 왕개가 아닌 석숭의 일화라고도 합니다. 손님 중에서 왕도는 억지로 술을 마셨지만, 왕돈은 오히려 일부러 술을 안 마시고 미인 세 명의 목이 잘리도록 내버려 두었습니다. 주인인 왕개는 가기의 목숨을 아끼지 않는 것으로 자기의 부를 과시했고, 손님인 왕돈은 그 모습에 꿈쩍도 않는 것으로 자기의 위엄을 과시한 것입니다. 당시의 일반인들은 상상도 못 할 일입니다.</p>
 
-<p>기녀에 대한 일반인의 접근성(?!)이 높아진 것은 아마도 당나라 때 교방(敎坊)이 생기고 민기(民妓)가 활발해지면서 비롯된 현상이 아닌가 합니다.</p>
+<p>기녀에 대한 일반인의 접근성(?!)이 높아진 것은 아마도 당나라 때 <span class="hanja-word" data-hanja="敎坊">교방</span>이 생기고 <span class="hanja-word" data-hanja="民妓">민기</span>가 활발해지면서 비롯된 현상이 아닌가 합니다.</p>
 
 <hr>
 
