--- a/body-washing/index.html
+++ b/body-washing/index.html
@@ -368,7 +368,7 @@
 <h2 id="-답변">💁 답변</h2>
 
 <p>그렇습니다.
-아<sup>雅</sup>가 세정제의 역사를 알지는 못하지만 적어도 그 시대에는 비누와 계면활성제가 없었을 것입니다.
+<span class="hanja-word" data-hanja="雅">아</span>가 세정제의 역사를 알지는 못하지만 적어도 그 시대에는 비누와 계면활성제가 없었을 것입니다.
 그렇다면 한나라 사람들은 몸이나 물건을 깨끗하게 씻기 위해 어떤 물질을 사용했을까요?</p>
 
 <p>우선 한나라 사람들이 얼마나 잘 씻었는지부터 알아봅시다.
@@ -376,14 +376,19 @@
 
 <blockquote>
   <ul>
-    <li>목<sup>沐</sup>: 머리를 감기</li>
-    <li>매<sup>沬</sup>: 얼굴을 씻기</li>
-    <li>욕<sup>浴</sup>: 몸을 씻기</li>
-    <li>조<sup>澡</sup>: 손을 씻기</li>
-    <li>세<sup>洗</sup>: 발을 씻기</li>
+    <li>
+<span class="hanja-word" data-hanja="沐">목</span>: 머리를 감기</li>
+    <li>
+<span class="hanja-word" data-hanja="沬">매</span>: 얼굴을 씻기</li>
+    <li>
+<span class="hanja-word" data-hanja="浴">욕</span>: 몸을 씻기</li>
+    <li>
+<span class="hanja-word" data-hanja="澡">조</span>: 손을 씻기</li>
+    <li>
+<span class="hanja-word" data-hanja="洗">세</span>: 발을 씻기</li>
   </ul>
 
-  <p><cite> 《설문해자<sup>說文解字</sup>》 권12 〈수부<sup>水部</sup>〉</cite></p>
+  <p><cite> 《<span class="hanja-word" data-hanja="說文解字">설문해자</span>》 권12 〈<span class="hanja-word" data-hanja="水部">수부</span>〉</cite></p>
 </blockquote>
 
 <p>즉, 한나라 사람들은 몸을 씻는 행위를 가리킬 때 머리카락, 얼굴, 손, 발 등 부위마다 각기 다른 용어가 있었습니다.
@@ -393,7 +398,7 @@
 
 <blockquote>
   <p>바깥사람(남자)과 안사람(여자)은 같은 우물을 쓰지 않고, 같은 욕실에서 목욕하지 않는다. [外內不共井，不共湢浴]
-<cite> 《예기<sup>禮記</sup>》 〈내칙<sup>內則</sup>〉 </cite></p>
+<cite> 《<span class="hanja-word" data-hanja="禮記">예기</span>》 〈<span class="hanja-word" data-hanja="內則">내칙</span>〉 </cite></p>
 </blockquote>
 
 <p>그렇다면 얼굴과 몸을 어떻게 씻었는지에 관한 구체적인 정보가 있을까요?
@@ -406,7 +411,7 @@
 발에 때가 있으면 물을 데우고 발을 씻으시기를 청한다.
 [五日，則燂湯請浴，三日具沐，其間面垢，燂潘請靧；足垢，燂湯請洗。]</p>
 
-  <p><cite> 《예기<sup>禮記</sup>》 〈내칙<sup>內則</sup>〉 </cite></p>
+  <p><cite> 《<span class="hanja-word" data-hanja="禮記">예기</span>》 〈<span class="hanja-word" data-hanja="內則">내칙</span>〉 </cite></p>
 </blockquote>
 
 <p>즉, 몸과 발은 따뜻한 물로 씻고, 얼굴은 쌀뜨물로 씻었다는 것을 알 수 있습니다.</p>
@@ -422,7 +427,7 @@
     <li>몸을 씻을 때는 상체와 하체에 각각 다른 수건을 쓴다. [浴用二巾，上絺下綌]</li>
   </ol>
 
-  <p><cite> 《예기<sup>禮記</sup>》 〈옥조<sup>玉藻</sup>〉 </cite></p>
+  <p><cite> 《<span class="hanja-word" data-hanja="禮記">예기</span>》 〈<span class="hanja-word" data-hanja="玉藻">옥조</span>〉 </cite></p>
 </blockquote>
 
 <p>한나라의 “군자”들은 얼굴을 씻고 머리를 감을 때 각기 다른 곡물을 사용했던 것입니다!</p>
@@ -432,8 +437,8 @@
 
 <h3 id="여담">여담</h3>
 
-<p>한나라 이후 진<sup>晉</sup>나라로 가면 세정제를 오용(?)한 기록을 찾을 수 있습니다.
-<a href="https://ctext.org/text.pl?node=91888&amp;if=en&amp;show=parallel">《세설신어》 〈비루〉에 나오는 일화</a>로, 진나라의 귀족 왕돈이 공주와 결혼한 뒤 저택에서 화장실에 갔을 때 시녀들이 손을 씻을 물과 조두<sup>澡豆</sup>를 내어 오자 조두를 물에 타서 마셔 버렸다는 이야기입니다.
+<p>한나라 이후 <span class="hanja-word" data-hanja="晉">진</span>나라로 가면 세정제를 오용(?)한 기록을 찾을 수 있습니다.
+<a href="https://ctext.org/text.pl?node=91888&amp;if=en&amp;show=parallel">《세설신어》 〈비루〉에 나오는 일화</a>로, 진나라의 귀족 왕돈이 공주와 결혼한 뒤 저택에서 화장실에 갔을 때 시녀들이 손을 씻을 물과 <span class="hanja-word" data-hanja="澡豆">조두</span>를 내어 오자 조두를 물에 타서 마셔 버렸다는 이야기입니다.
 여기서 ‘조두’란 곡물 등으로 만든 일종의 가루비누를 말합니다.
 왕돈은 조두가 미숫가루인 줄 알았다고 말했지만, 예전 포스트 〈<a href="/alcohol-and-sex/">“주색” 넘치는 향연</a>〉의 일화를 살펴보면 자존심 센 왕돈이 공주와 일부러 기싸움을 벌인 것 같기도 합니다.</p>
 
