--- a/index.html
+++ b/index.html
@@ -343,12 +343,12 @@
                                 <a class="text-dark" href="/sanguozhi-qna/">삼국지 질문 응모를 받습니다</a>
                                 
                             </h2>
-                            <h4 class="card-text">안녕하세요? 아(雅)가 《창작자와 오타쿠를 위한 삼국지 100문 100답(가제)》이라는 기획을 시작하여 질문을 모집하고 있습니다. 삼국지에 관해 사소하게 궁금했던 내용을 공유해 주시면 질문이 채택되신 모든 분께 선물을 드려요!
+                            <h4 class="card-text">안녕하세요? 아雅가 《창작자와 오타쿠를 위한 삼국지 100문 100답(가제)》이라는 기획을 시작하여 질문을 모집하고 있습니다. 삼국지에 관해 사소하게 궁금했던 내용을 공유해 주시면 질문이 채택되신 모든 분께 선물을 드려요!
 
 질문 예시
 
 
- ...</h4>
+  삼...</h4>
                         </div>
                         <div class="card-footer b-0 bg-white mt-auto">
                             <div class="wrapfooter">
