--- a/liu-xiang-hated-beautiful-women/index.html
+++ b/liu-xiang-hated-beautiful-women/index.html
@@ -529,7 +529,7 @@
                 <h3 class="related-post-title">한나라의 똑똑한 여자들은 어떻게 되었을까?</h3>
                 <p class="related-post-excerpt">🙋 질문
 
-한나라 때 여사(女士)의 기준은 어떠했나요? 남성 지식인과 대등하거나 그보다 뛰어난 역량을 증명해야 여사로 인정받았는지, 혹은 그보다 덜해도 ‘여자치고는 똑똑하네’...</p>
+한나라 때 여사女士의 기준은 어떠했나요? 남성 지식인과 대등하거나 그보다 뛰어난 역량을 증명해야 여사로 인정받았는지, 혹은 그보다 덜해도 ‘여자치고는 똑똑하네’라며...</p>
               </div>
             </a>
           </article>
@@ -549,7 +549,7 @@
 
 💁 답변
 
-한국에는 “은장도”로 유명한 장도(粧刀)의 전통이 있...</p>
+한국에는 “은장도”로 유명한 장도粧刀의 전통이 있었습...</p>
               </div>
             </a>
           </article>
