--- a/page4/index.html
+++ b/page4/index.html
@@ -340,11 +340,11 @@
             </h2>
             <h4 class="card-text">🙋 질문
 
-한나라 때 여사(女士)의 기준은 어떠했나요? 남성 지식인과 대등하거나 그보다 뛰어난 역량을 증명해야 여사로 인정받았는지, 혹은 그보다 덜해도 ‘여자치고는 똑똑하네’라며 여사로 간주했는지 궁금합니다.
+한나라 때 여사女士의 기준은 어떠했나요? 남성 지식인과 대등하거나 그보다 뛰어난 역량을 증명해야 여사로 인정받았는지, 혹은 그보다 덜해도 ‘여자치고는 똑똑하네’라며 여사로 간주했는지 궁금합니다.
 
 💁 답변
 
-우선 “여사(女士)”라는...</h4>
+우선 “여사女士”라는 표현 ...</h4>
         </div>
         <div class="card-footer bg-white">
             <div class="wrapfooter">
@@ -514,7 +514,7 @@
 
 💁 답변
 
-마왕퇴한묘 1호 무덤에 묻힌 신추의 머리장식은 보요(步...</h4>
+마왕퇴한묘 1호 무덤에 묻힌 신추의 머리장식은 보요步搖...</h4>
         </div>
         <div class="card-footer bg-white">
             <div class="wrapfooter">
