--- a/sanguozhi-qna/index.html
+++ b/sanguozhi-qna/index.html
@@ -361,7 +361,7 @@
                 <!-- Toc if any -->
                 
                 <!-- End Toc -->
-                <p>안녕하세요? 아(雅)가 《창작자와 오타쿠를 위한 삼국지 100문 100답(가제)》이라는 기획을 시작하여 질문을 모집하고 있습니다. 삼국지에 관해 사소하게 궁금했던 내용을 공유해 주시면 질문이 채택되신 모든 분께 선물을 드려요!</p>
+                <p>안녕하세요? <span class="hanja-word" data-hanja="雅">아</span>가 《창작자와 오타쿠를 위한 삼국지 100문 100답(가제)》이라는 기획을 시작하여 질문을 모집하고 있습니다. 삼국지에 관해 사소하게 궁금했던 내용을 공유해 주시면 질문이 채택되신 모든 분께 선물을 드려요!</p>
 
 <h3 id="질문-예시">질문 예시</h3>
 
