deploy: zya-han/zya-han.github.io-private@4f2eb8f0e24ad736486d35211353eb5268f44ef8

--- a/about.html
+++ b/about.html
@@ -327,7 +327,7 @@
 
 <h4 id="️-문의">✉️ 문의</h4>
 
-<p><code class="language-plaintext highlighter-rouge">chiclaxica _at_ gmail _dot_ com</code></p>
+<p><code class="language-plaintext highlighter-rouge">zya.han.writer _at_ gmail _dot_ com</code></p>
 
 <h4 id="-구매-및-후원">💸 구매 및 후원</h4>
 
