deploy: zya-han/zya-han.github.io-private@0b36a7b5596f3fd93c89362403ecc9aff8927f5f

--- a/how-to-translate-professor/index.html
+++ b/how-to-translate-professor/index.html
@@ -381,7 +381,7 @@
 
 <p>소설 《삼국연의》에는 조조가 순유를 <span class="hanja-word" data-hanja="行軍教授">행군교수</span>로 삼았다는 이야기가 나옵니다.
 하지만 <span class="hanja-word" data-hanja="雅">아</span>가 아는 한 ‘교수’라는 관직명은 《사기》에도 《한서》에도 《후한서》에도 《삼국지》에도 나오지 않습니다.
-즉, 행군교수는 나본 양반의 창작일 것입니다.
+즉, 순유가 행군교수가 되었다는 것은 나본 양반의 창작일 것입니다.
 이를 통해 일단 원나라에서 명나라 사이에 교수라는 관직이 있었다는 사실을 알 수 있습니다.</p>
 
 <p>이제 <a href="https://ctext.org">Chinese Text Project</a>와 <a href="https://hanchi.ihp.sinica.edu.tw/ihp/hanji.htm">Scripta Sinica</a>에서 教授를 검색합니다.
