deploy: zya-han/zya-han.github.io-private@fb355b4038a18a95cf5f311d5bdd99ba05f355e0

--- a/categories.html
+++ b/categories.html
@@ -252,9 +252,9 @@
 
 딜도의 주인, 강도왕 유비
 
-인터넷에서 “한무제”로 검색하다가 무제의 무덤에서 동으로 만든 남성기 모형이 나왔다는 이야기를 찾았습니다.
+인터넷에서 “한무제”로 검색하다가 무제의 무덤에서 동으로 만든 음경 모형이 나왔다는 이야기를 찾았습니다.
 일단 역시 유철이라고 환호했습니다.
-한...</h4>
+한참...</h4>
         </div>
         <div class="card-footer bg-white">
             <div class="wrapfooter">
@@ -10949,9 +10949,9 @@ B: 그런데 삼공은 뭐죠?
 
 딜도의 주인, 강도왕 유비
 
-인터넷에서 “한무제”로 검색하다가 무제의 무덤에서 동으로 만든 남성기 모형이 나왔다는 이야기를 찾았습니다.
+인터넷에서 “한무제”로 검색하다가 무제의 무덤에서 동으로 만든 음경 모형이 나왔다는 이야기를 찾았습니다.
 일단 역시 유철이라고 환호했습니다.
-한...</h4>
+한참...</h4>
         </div>
         <div class="card-footer bg-white">
             <div class="wrapfooter">
