--- a/naming-dogs/index.html
+++ b/naming-dogs/index.html
@@ -740,7 +740,7 @@
 
 딜도의 주인, 강도왕 유비
 
-인터넷에서 “한무제”로 검색하다가 무제의 무덤에서 동으로 만든 남성기 모형...</p>
+인터넷에서 “한무제”로 검색하다가 무제의 무덤에서 동으로 만든 음경 모형이...</p>
               </div>
             </a>
           </article>
