deploy: zya-han/zya-han.github.io-private@96a0933bf892317dcd075cfdf31d938c7cd6483a

--- a/bronze-dildo/index.html
+++ b/bronze-dildo/index.html
@@ -376,7 +376,7 @@
 
 <p>청동 딜도와 함께 묻힌 유비는 어떤 사람이었을까요?
 유비는 튼튼하고 용맹한 인물이었습니다.
-경제 3년 <span class="hanja-word" data-hanja="吳">오</span>·<span class="hanja-word" data-hanja="楚">초</span> 7국의 난이 일어낫을 때, 황제의 아들 유비는 15세의 나이로 출전을 자청하여 장군의 도장을 받고 오나라 공격에 참여했습니다.
+경제 3년 <span class="hanja-word" data-hanja="吳">오</span>·<span class="hanja-word" data-hanja="楚">초</span> 7국의 난이 일어났을 때, 황제의 아들 유비는 15세의 나이로 출전을 자청하여 장군의 도장을 받고 오나라 공격에 참여했습니다.
 반란이 진압된 뒤 경제는 오나라의 옛 땅을 강도국으로 개칭해서 유비에게 봉해 주었습니다.
 이렇게 싸움을 즐기는 성질은 중년이 되고서도 여전해서, 유비는 동생 유철이 황제로 즉위하고 흉노와 전쟁을 벌일 때도 출전하겠다고 나섰습니다.
 《사기》와 《한서》에 나오는 유비는 힘을 과시하기를 좋아하고 사방의 호걸을 불러모았으며, <a href="https://ctext.org/xijing-zaji/4#n647225">《서경잡기》에 따르면 운동을 잘해서 7척(161cm)짜리 병풍을 뛰어넘을 수 있을 정도였다고 합니다.</a>
