--- a/c/fan3k/index.html
+++ b/c/fan3k/index.html
@@ -19,6 +19,9 @@
     <meta property="og:description" content="역사책 《삼국지》 및 필기소설 기반으로 삼국지 등장인물에 관한 팬픽을 씁니다." />
     <meta property="og:image" content="https://zyahan.blog/assets/images/categories/storytelling-figurine.jpg" />
     <meta property="og:url" content="https://zyahan.blog/category/기타-삼국지-팬픽/" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BGPF88VHK2"></script>
   </head>
   <body>
     <p>잠시만 기다려 주세요. <a href="/category/기타-삼국지-팬픽/">여기로 이동</a>.</p>
