--- a/c/hanworld/index.html
+++ b/c/hanworld/index.html
@@ -19,6 +19,9 @@
     <meta property="og:description" content="중국 한나라 배경으로 창작할 때 참고할 만한 떡밥을 캡니다. 《사기》, 《한서》, 《후한서》, 《삼국지》를 다룹니다." />
     <meta property="og:image" content="https://zyahan.blog/assets/images/categories/mirror.jpg" />
     <meta property="og:url" content="https://zyahan.blog/category/한나라-설정집/" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BGPF88VHK2"></script>
   </head>
   <body>
     <p>잠시만 기다려 주세요. <a href="/category/한나라-설정집/">여기로 이동</a>.</p>
