--- a/c/idioms/index.html
+++ b/c/idioms/index.html
@@ -19,6 +19,9 @@
     <meta property="og:description" content="한나라 사람들이 쓰는 비유법과 인삿말 등의 관용 표현을 알아보고 더 생생한 대사를 써 봅시다." />
     <meta property="og:image" content="https://zyahan.blog/assets/images/categories/jin-midi.jpeg" />
     <meta property="og:url" content="https://zyahan.blog/category/한나라-숙어-노트/" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BGPF88VHK2"></script>
   </head>
   <body>
     <p>잠시만 기다려 주세요. <a href="/category/한나라-숙어-노트/">여기로 이동</a>.</p>
