--- a/c/pocket/index.html
+++ b/c/pocket/index.html
@@ -19,6 +19,9 @@
     <meta property="og:description" content="후한 말~삼국~서진 시대에 사람들이 어떻게 생활했는지를 알리고, 창작자들이 참고할 수 있는 정보를 제공합니다." />
     <meta property="og:image" content="https://zyahan.blog/assets/images/s1-cover-front.png" />
     <meta property="og:url" content="https://zyahan.blog/category/삼국지포켓북/" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BGPF88VHK2"></script>
   </head>
   <body>
     <p>잠시만 기다려 주세요. <a href="/category/삼국지포켓북/">여기로 이동</a>.</p>
