--- a/c/qa3k/index.html
+++ b/c/qa3k/index.html
@@ -19,6 +19,9 @@
     <meta property="og:description" content="《삼국지》를 읽을 때 궁금하셨던 점에 관해 남겨 주신 질문에 답합니다." />
     <meta property="og:image" content="https://zyahan.blog/assets/images/categories/incense-sticks.jpeg" />
     <meta property="og:url" content="https://zyahan.blog/category/삼국지-질의응답/" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BGPF88VHK2"></script>
   </head>
   <body>
     <p>잠시만 기다려 주세요. <a href="/category/삼국지-질의응답/">여기로 이동</a>.</p>
