--- a/c/talk/index.html
+++ b/c/talk/index.html
@@ -19,6 +19,9 @@
     <meta property="og:description" content="가끔 한나라 이외의 다른 시대에 관해 이야기하고 싶을 때도 있습니다." />
     <meta property="og:image" content="https://zyahan.blog/assets/images/categories/tang-court-lady.jpg" />
     <meta property="og:url" content="https://zyahan.blog/category/잡담/" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BGPF88VHK2"></script>
   </head>
   <body>
     <p>잠시만 기다려 주세요. <a href="/category/잡담/">여기로 이동</a>.</p>
