--- a/c/tmi-cao/index.html
+++ b/c/tmi-cao/index.html
@@ -19,6 +19,9 @@
     <meta property="og:description" content="삼국지에 나오는 위 무제 조조의 일상과 취향에 대한 고전의 기록을 조각조각 모았습니다. 멤버십에 한해 공개합니다." />
     <meta property="og:image" content="https://zyahan.blog/assets/images/categories/cao-cao.jpeg" />
     <meta property="og:url" content="https://zyahan.blog/category/조맹덕의-TMI/" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BGPF88VHK2"></script>
   </head>
   <body>
     <p>잠시만 기다려 주세요. <a href="/category/조맹덕의-TMI/">여기로 이동</a>.</p>
