--- a/c/essay/index.html
+++ b/c/essay/index.html
@@ -19,6 +19,9 @@
     <meta property="og:description" content="주로 무엇인가를 제안하고 싶을 때 쓴 글입니다." />
     <meta property="og:image" content="https://zyahan.blog/assets/images/categories/woman-figurine.jpg" />
     <meta property="og:url" content="https://zyahan.blog/category/에세이/" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BGPF88VHK2"></script>
   </head>
   <body>
     <p>잠시만 기다려 주세요. <a href="/category/에세이/">여기로 이동</a>.</p>
