--- a/c/fiction/index.html
+++ b/c/fiction/index.html
@@ -19,6 +19,9 @@
     <meta property="og:description" content="소설을 모아 놓았습니다." />
     <meta property="og:image" content="https://zyahan.blog/assets/images/categories/plaque.jpg" />
     <meta property="og:url" content="https://zyahan.blog/category/소설/" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BGPF88VHK2"></script>
   </head>
   <body>
     <p>잠시만 기다려 주세요. <a href="/category/소설/">여기로 이동</a>.</p>
