--- a/c/info/index.html
+++ b/c/info/index.html
@@ -19,6 +19,9 @@
     <meta property="og:description" content="정보를 제공하는 글을 모았습니다. 대체로 《사기》, 《한서》, 《후한서》, 《삼국지》의 세계를 커버합니다." />
     <meta property="og:image" content="https://zyahan.blog/assets/images/hu.jpg" />
     <meta property="og:url" content="https://zyahan.blog/category/정보/" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BGPF88VHK2"></script>
   </head>
   <body>
     <p>잠시만 기다려 주세요. <a href="/category/정보/">여기로 이동</a>.</p>
