--- a/c/oldchinese/index.html
+++ b/c/oldchinese/index.html
@@ -19,6 +19,9 @@
     <meta property="og:description" content="상고한어, 즉 고대중국어로 한문을 낭독합니다. 한때는 노래도 불렀습니다." />
     <meta property="og:image" content="https://zyahan.blog/assets/images/categories/watchtower.jpg" />
     <meta property="og:url" content="https://zyahan.blog/category/상고한어/" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BGPF88VHK2"></script>
   </head>
   <body>
     <p>잠시만 기다려 주세요. <a href="/category/상고한어/">여기로 이동</a>.</p>
