--- a/c/romance/index.html
+++ b/c/romance/index.html
@@ -19,6 +19,9 @@
     <meta property="og:description" content="소설 《삼국연의》 원문을 읽다가 눈에 띄는 부분을 기록해 놓습니다. 주로 사서 《삼국지》와 비교합니다." />
     <meta property="og:image" content="https://zyahan.blog/assets/images/categories/lv-bu.jpg" />
     <meta property="og:url" content="https://zyahan.blog/category/삼국연의-읽기/" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BGPF88VHK2"></script>
   </head>
   <body>
     <p>잠시만 기다려 주세요. <a href="/category/삼국연의-읽기/">여기로 이동</a>.</p>
