--- a/c/toolate/index.html
+++ b/c/toolate/index.html
@@ -19,6 +19,9 @@
     <meta property="og:description" content="엽편집. 하비성이 함락된 후 포로로 잡힌 진궁이 조조에게 자기를 사형에 처해 달라고 요청했다는 사실과, 조조가 그를 죽이지 않고 육형을 가하여 곁에 두었다는 날조. 정사 《삼국지》 기반." />
     <meta property="og:image" content="https://zyahan.blog/assets/images/categories/toolate-front.jpg" />
     <meta property="og:url" content="https://zyahan.blog/category/자살하기에는-너무-늦어-버려서/" />
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BGPF88VHK2"></script>
   </head>
   <body>
     <p>잠시만 기다려 주세요. <a href="/category/자살하기에는-너무-늦어-버려서/">여기로 이동</a>.</p>
