deploy: zya-han/zya-han.github.io-private@bc389ec3e2cae8e0ea10de6a2f1d84edb76b3a4b

--- a/another-bronze-dildo-and-lesbians/index.html
+++ b/another-bronze-dildo-and-lesbians/index.html
@@ -368,7 +368,7 @@
                         <ul>
   <li><a href="#또-다른-딜도의-주인-중산-정왕-유승">또 다른 딜도의 주인, 중산 정왕 유승</a>
     <ul>
-      <li><a href="#왕이란-종일-가무와-섹스를-즐겨야-한다">“왕이란 종일 가무와 섹스를 즐겨야 한다”</a></li>
+      <li><a href="#왕은-종일-가무와-섹스를-즐겨야">“왕은 종일 가무와 섹스를 즐겨야”</a></li>
     </ul>
   </li>
   <li><a href="#한나라의-여성간-동성애">한나라의 여성간 동성애</a>
@@ -389,7 +389,7 @@
 그런데 사실 이것이 전부가 아닙니다.
 무제의 또 다른 형, 중산왕 유승의 무덤에서도 청동 딜도가 발견된 것입니다.</p>
 
-<h4 id="왕이란-종일-가무와-섹스를-즐겨야-한다">“왕이란 종일 가무와 섹스를 즐겨야 한다”</h4>
+<h4 id="왕은-종일-가무와-섹스를-즐겨야">“왕은 종일 가무와 섹스를 즐겨야”</h4>
 
 <p>강도왕 <span class="hanja-word" data-hanja="劉非">유비</span>가 전투를 좋아했다면 중산왕 <span class="hanja-word" data-hanja="劉勝">유승</span>은 향락을 좋아했습니다.
 유승은 이웃 제후국의 왕이자 어머니가 같은 형인 <span class="hanja-word" data-hanja="劉彭祖">유팽조</span>를 비난한 적이 있습니다.</p>
