deploy: zya-han/zya-han.github.io-private@b2b528ca22bba488f7548ac4ec5a45fd86e1d82a

--- a/taoyao-oc/index.html
+++ b/taoyao-oc/index.html
@@ -393,6 +393,19 @@
   <source src="/assets/videos/taoyao-old-chinese-song.mp4" type="video/mp4"></source>
   브라우저가 동영상을 지원하지 않습니다.
 </video>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "VideoObject",
+  "name": "Peach Blossoms (桃夭) - Old Chinese Song",
+  "description": "An Old Chinese transcription and musical rendition of 'Peach Blossoms' (Tao Yao, 桃夭) from the Book of Songs, 詩經.",
+  "thumbnailUrl": "https://zyahan.blog/assets/images/cards/peach-tree.jpeg",
+  "uploadDate": "2024-09-13",
+  "contentUrl": "https://zyahan.blog/assets/videos/taoyao-old-chinese-song.mp4",
+  "embedUrl": "https://zyahan.blog/oldchinese/taoyao-oc/"
+}
+</script>
+
 
             </div>
 
