--- a/yeyousijun-oc/index.html
+++ b/yeyousijun-oc/index.html
@@ -393,6 +393,20 @@
   브라우저가 동영상을 지원하지 않습니다.
 </video>
 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "VideoObject",
+  "name": "Dead Antelope in the Field (野有死麕) - Old Chinese Song",
+  "description": "An Old Chinese transcription and musical rendition of 'Dead Antelope in the Field' (Ye You Si Jun, 野有死麕) from the Book of Songs, 詩經.",
+  "thumbnailUrl": "https://zyahan.blog/assets/images/cards/antelope.jpeg",
+  "uploadDate": "2024-09-18",
+  "contentUrl": "https://zyahan.blog/assets/videos/yeyousijun-old-chinese-song.mp4",
+  "embedUrl": "https://zyahan.blog/oldchinese/yeyousijun-oc/"
+}
+</script>
+
+
             </div>
 
             <!-- 다국어 포스트 링크 -->
