deploy: zya-han/zya-han.github.io-private@d13214cb66c334b01b0b458d276ad07fe736861e

--- a/human-swine/index.html
+++ b/human-swine/index.html
@@ -379,7 +379,7 @@
       <li><a href="#통치자의-연대기">통치자의 연대기</a></li>
     </ul>
   </li>
-  <li><a href="#-한서의-기록">📑 《한서》의 기록</a>
+  <li><a href="#-한서의-서술">📑 《한서》의 서술</a>
     <ul>
       <li><a href="#외척전-본문-번역">〈외척전〉 본문 번역</a></li>
       <li><a href="#후궁에서-벌어진-은밀한-이야기">후궁에서 벌어진 은밀한 이야기</a></li>
@@ -477,7 +477,7 @@
 즉, 이 사건들은 마치 정상적인 통치행위인 것처럼 새로운 조왕의 책봉, 영무후의 시호 추서 등의 조치와 나란히 나열되었습니다.
 이 건조한 서술이 오히려 독자에게 더 큰 충격을 전하는 듯합니다.</p>
 
-<h3 id="-한서의-기록">📑 《한서》의 기록</h3>
+<h3 id="-한서의-서술">📑 《한서》의 서술</h3>
 
 <h4 id="외척전-본문-번역">〈외척전〉 본문 번역</h4>
 
