deploy: zya-han/zya-han.github.io-private@7a08efbae60db2766453fe6a8d527ed1f89a1530

--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -300,7 +300,7 @@ Google Analytics에 저장된 데이터는 Google의 정책에 따릅니다.</p>
 <h3 id="7-문의">7. 문의</h3>
 
 <p>개인정보 보호와 관련하여 궁금하신 점이 있다면
-<a href="mailto:chiclaxica@gmail.com">이메일</a>이나 댓글을 통해 문의해 주세요.</p>
+<a href="mailto:chiclaxica@gmail.com">메일</a>이나 댓글을 통해 문의해 주세요.</p>
 
 <hr />
 
