--- a/taoyao-oc/index.html
+++ b/taoyao-oc/index.html
@@ -382,7 +382,7 @@
 <cite>《시경·국풍·주남》 〈도요〉(桃夭)</cite></p>
 </blockquote>
 
-<p>《자살하기에는 너무 늦어 버려서》 〈복숭아나무 소담하고〉와도 관련이 있습니다.</p>
+<p>《<a href="/category/%EC%9E%90%EC%82%B4%ED%95%98%EA%B8%B0%EC%97%90%EB%8A%94-%EB%84%88%EB%AC%B4-%EB%8A%A6%EC%96%B4-%EB%B2%84%EB%A0%A4%EC%84%9C/">자살하기에는 너무 늦어 버려서</a>》 〈<a href="/too-late-2-3/">복숭아나무 소담하고</a>〉와도 관련이 있습니다.</p>
 
 <h3 id="-노래-영상">🎵 노래 영상</h3>
 
