--- a/page29/index.html
+++ b/page29/index.html
@@ -401,9 +401,9 @@
             </h2>
             <h4 class="card-text">접시를 덮은 천을 진궁이 걷어내자 반듯하게 잘린 복숭아 여덟 조각이 향을 뿜었다.1
 
-“분수에 안 맞게 화려한 세팅이네요. 나한텐 그냥 안 썰고 껍질째로 던져 주시면 되는데.]”2
+“분수에 안 맞게 화려한 세팅이네요. 나한텐 그냥 안 썰고 껍질째로 던져 주시면 되는데.”2
 
-조조는 진궁이 예법을 들먹이는 것을 못 들은 척하고 말을 돌렸다...</h4>
+조조는 진궁이 예법을 들먹이는 것을 못 들은 척하고 말을 돌렸다....</h4>
         </div>
         <div class="card-footer bg-white">
             <div class="wrapfooter">
