--- a/imperial-titles-for-sun-quan/index.html
+++ b/imperial-titles-for-sun-quan/index.html
@@ -415,7 +415,7 @@
   <p><span class="topic">국가</span>께서 소하의 임무를 군께 맡기셨는데… [國家以蕭何之任付君]</p>
 </blockquote>
 
-<p>감녕은 손권을 ‘지존’으로 호칭하고 ‘국가’로 호칭하며 장소를 소하에 빗댐으로써 손권을 한나라 고제 유방에 빗대는 3단콤보를 달성했습니다.
+<p>감녕은 손권을 ‘지존’으로 호칭하고 ‘국가’로 지칭하며 장소를 소하에 빗댐으로써 손권을 한나라 고제 유방에 빗대는 3단콤보를 달성했습니다.
 손권이 황조의 목을 벤 것이 건안13년 초였으니 이 대화는 그 이전에 일어난 일입니다.
 감녕은 손권에게 귀순한 지 아직 얼마 되지도 않은 때에 과감한 발언으로 손권의 세력 전체에 충격을 준 것입니다.</p>
 
