deploy: zya-han/zya-han.github.io-private@8bbcea7e97f56faa5eb031e9596b7ac18ff475e0

--- a/imperial-titles-for-sun-quan/index.html
+++ b/imperial-titles-for-sun-quan/index.html
@@ -480,6 +480,11 @@
                     </li>
                     
                     <li>
+                        <!-- <a class="smoothscroll" href="/tags#%EC%82%BC%EA%B5%AD%EC%A7%80">#삼국지</a> -->
+                        <a class="smoothscroll" href="/tags#삼국지">#삼국지</a>
+                    </li>
+                    
+                    <li>
                         <!-- <a class="smoothscroll" href="/tags#%EC%86%90%EA%B6%8C">#손권</a> -->
                         <a class="smoothscroll" href="/tags#손권">#손권</a>
                     </li>
