deploy: zya-han/zya-han.github.io-private@eb41b47334a886f2fcd5f596ad2257c37109063e

--- a/zh/duangexing-mc/index.html
+++ b/zh/duangexing-mc/index.html
@@ -377,13 +377,15 @@
                 <!-- Toc if any -->
                 
                 <!-- End Toc -->
-                <p>조조가 지은 〈단가행〉을 중고한어 재구음으로 낭독했습니다.<br>
-朗读了曹操所作的《短歌行》中古汉语拟音版本。<br>
-Recited A Song of the Short Life by Cao Cao in reconstructed Middle Chinese pronunciation.</p>
+                <p><span lang="ko">조조가 지은 〈단가행〉을 중고한어 재구음으로 낭독했습니다.<span></span></span></p>
+
+<p><span lang="zh">朗读了曹操所作的《短歌行》中古汉语拟音版本。</span></p>
+
+<p><span lang="en">Recited <em>A Song of the Short Life</em> by Cao Cao in reconstructed Middle Chinese pronunciation.</span></p>
 
 <video controls="" width="100%" style="max-width: 600px; border-radius: 10px;">
   <source src="/assets/videos/duangexing.mp4" type="video/mp4"></source>
-  브라우저가 동영상을 지원하지 않습니다.
+  브라우저가 동영상을 지원하지 않습니다.`
 </video>
 
             </div>
