--- a/categories.html
+++ b/categories.html
@@ -286,8 +286,10 @@
                 
             </h2>
             <h4 class="card-text">조조가 지은 〈단가행〉을 중고한어 재구음으로 낭독했습니다.
+
 朗读了曹操所作的《短歌行》中古汉语拟音版本。
-Recited A Song of the Short Life by Cao Cao in reconstructed Middle Chinese pronu...</h4>
+
+Recited A Song of the Short Life by Cao Cao in reconstructed Middle Chinese pro...</h4>
         </div>
         <div class="card-footer bg-white">
             <div class="wrapfooter">
@@ -18318,8 +18320,10 @@ B: 그런데 삼공은 뭐죠?
                 
             </h2>
             <h4 class="card-text">조조가 지은 〈단가행〉을 중고한어 재구음으로 낭독했습니다.
+
 朗读了曹操所作的《短歌行》中古汉语拟音版本。
-Recited A Song of the Short Life by Cao Cao in reconstructed Middle Chinese pronu...</h4>
+
+Recited A Song of the Short Life by Cao Cao in reconstructed Middle Chinese pro...</h4>
         </div>
         <div class="card-footer bg-white">
             <div class="wrapfooter">
